[package]
name = "tiny-data-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-compression = { version = "0.4.27", features = ["gzip", "tokio"] }
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
futures-concurrency = "7.6.3"
http = "1.3.1"
rand = "0.9.2"
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
